# The-Art-of-CPP-Development

./: .gitignore  README.md
01_White_Belt/01_Week/1_4_09_a+b/: main.cpp
01_White_Belt/04_Week/04_02_14_Students_list/: CMakeLists.txt
01_White_Belt/04_Week/04_03_04_Class_Rational_2/: CMakeLists.txt
01_White_Belt/04_Week/04_03_05_Class_Rational_3/: CMakeLists.txt
01_White_Belt/04_Week/04_03_06_Class_Rational_4/: CMakeLists.txt
01_White_Belt/04_Week/04_03_07_Class_Rational_5/: CMakeLists.txt
01_White_Belt/04_Week/04_04_05_Function_EnsureEqual/: CMakeLists.txt
01_White_Belt/04_Week/04_04_06_Class_Rational_6/: CMakeLists.txt
01_White_Belt/04_Week/04_04_07_Class_Rational_7/: CMakeLists.txt
01_White_Belt/04_Week/04_04_08_Time_Server/: CMakeLists.txt
02_Yellow/01_Week/01_02_01_Matrix_Sum/: CMakeLists.txt
02_Yellow/01_Week/01_03_08_Average_temperature2/: CMakeLists.txt
02_Yellow/01_Week/01_03_09_Blocks_Mass/: CMakeLists.txt
02_Yellow/01_Week/01_04_04_RegionsBase/: CMakeLists.txt
02_Yellow/01_Week/01_04_05_TeamTasks/: CMakeLists.txt
02_Yellow/01_Week/01_05_10_Template_Sqr/: CMakeLists.txt
02_Yellow/01_Week/01_05_11_Ref_To_Elem/: CMakeLists.txt
02_Yellow/02_Week/02_01_08_Decomposition/: CMakeLists.txt
02_Yellow/02_Week/02_04_02_Test_equation/: CMakeLists.txt
02_Yellow/02_Week/02_04_03_Test_Person/: CMakeLists.txt
02_Yellow/02_Week/02_04_04_Test_Rational/: CMakeLists.txt
02_Yellow/02_Week/02_04_05_Test_Palindrom/: CMakeLists.txt
02_Yellow/03_Week/03_03_01_phone_number/: CMakeLists.txt
02_Yellow/03_Week/03_03_01_phone_number/src/: main.cpp  phone_number.cpp
02_Yellow/03_Week/03_03_02_rectangle/: CMakeLists.txt
02_Yellow/03_Week/03_03_03_decomposition2/: CMakeLists.txt
02_Yellow/03_Week/03_03_03_decomposition2/src/: ____  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
02_Yellow/04_Week/04_01_05_print_vector_part/: CMakeLists.txt  answer
02_Yellow/04_Week/04_01_06_set_part/: CMakeLists.txt  answer
02_Yellow/04_Week/04_01_07_string_split/: CMakeLists.txt  answer
02_Yellow/04_Week/04_02_09/: CMakeLists.txt
02_Yellow/04_Week/04_03_03_personal_budget_2/: CMakeLists.txt  input.txt
02_Yellow/04_Week/04_03_03_personal_budget_2/src/: main.cpp
02_Yellow/05_Week/05_01_12_Inheritance/: CMakeLists.txt
02_Yellow/05_Week/05_01_12_Inheritance/src/: main.cpp
04_Brown/02_Week/02_02_01_LoadFromIni/: CMakeLists.txt  readme.md
04_Brown/02_Week/02_02_01_LoadFromIni/src/: ini.cpp  ini.h  main.cpp  test_runner.h  tests.h
04_Brown/05_Week/05_02_08_demographics_tests/: CMakeLists.txt  readme.md
04_Brown/05_Week/05_02_08_demographics_tests/src/: bug0_bad.cpp  bug0_good.cpp  bug3_bad.cp  bug_all_bad.cpp  bug_all_good.cpp  good0_bad.cp  solution.cpp
(+481 files in other folders)
